relay-general/tests/snapshots/legacy_python__store_processor.snap
---
source: relay-general/tests/test_fixtures.rs
expression: SerializableAnnotated(&event)
---
event_id: b308014887f5418c8f797159bfb6fc42
level: error
type: error
logentry:
  formatted: "ZeroDivisionError: division by zero"
logger: ""
modules:
  python: 3.7.0
platform: python
timestamp: "[timestamp]"
received: "[received]"
exception:
  values:
    - type: ZeroDivisionError
      value: division by zero
      module: builtins
      stacktrace:
        frames:
          - function: "<module>"
            module: __main__
            filename: "<stdin>"
            abs_path: "<stdin>"
            lineno: 1
            vars:
              Client: "<class 'raven.base.Client'>"
              __annotations__: {}
              __builtins__: "<module 'builtins' (built-in)>"
              __doc__: ~
              __loader__: "<class '_frozen_importlib.BuiltinImporter'>"
              __name__: "'__main__'"
              __package__: ~
              __spec__: ~
              client: "<raven.base.Client object at 0x1025e9400>"
tags:
  - - server_name
    - apfeltasche.local
extra:
  sys.argv:
    - "''"
sdk:
  name: raven-python
  version: 6.9.0
